--- a/portfolio.html
+++ b/portfolio.html
@@ -43,49 +43,49 @@
             <a href=""></a>
             <img src="./img2/img-2.jpg" alt="баскетболисты с мячем" />
             <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Приложение</p>
+            <p>Дизайн</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-3.jpg" alt="акула с надписью" />
+            <h3>Ресторан Seafood</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <a href=""></a>
+            <img src="./img2/img-4.jpg" alt="наушники" />
             <h3>Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
             <a href=""></a>
-            <img src="./img2/img-4.jpg" alt="наушники" />
+            <img src="./img2/img-5.jpg" alt="коробочки" />
             <h3>Проект Boxes</h3>
             <p>Приложение</p>
           </li>
           <li>
             <a href=""></a>
-            <img src="./img2/img-5.jpg" alt="коробочки" />
+            <img src="./img2/img-6.jpg" alt="монитор" />
             <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
             <a href=""></a>
-            <img src="./img2/img-6.jpg" alt="монитор" />
+            <img src="./img2/img-7.jpg" alt="открытый журнал" />
             <h3>Издание Limited Edition</h3>
             <p>Дизайн</p>
           </li>
           <li>
             <a href=""></a>
-            <img src="./img2/img-7.jpg" alt="открытый журнал" />
+            <img src="./img2/img-8.jpg" alt="бирка" />
             <h3>Проект LAB</h3>
             <p>Маркетинг</p>
           </li>
           <li>
             <a href=""></a>
-            <img src="./img2/img-8.jpg" alt="бирка" />
+            <img src="./img2/img-9.jpg" alt="ноутбук" />
             <h3>Growing Business</h3>
             <p>Приложение</p>
-          </li>
-          <li>
-            <a href=""></a>
-            <img src="./img2/img-9.jpg" alt="ноутбук" />
-            <h3></h3>
-            <p></p>
           </li>
         </ul>
       </section>
