--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home work 1</title>
+    <title>main page</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="page">
     <!--- шапка-->
     <header>
       <nav>
-        <a href="WebStudio">WebStudio</a>
+        <a href="index.html" class="logo">
+          <span class="logo-main">Web</span>
+          <span class="logo-part">Studio</span>
+        </a>
         <ul>
           <li><a href="Студия">Студия</a></li>
           <li><a href="Портфолио">Портфолио</a></li>
