--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
       <nav>
         <a href="index.html" class="logo">
-          <span class="logo-main">Web</span>
-          <span class="logo-part">Studio</span>
+          <span class="logo-main">Web</span
+          ><span class="logo-part">Studio</span>
         </a>
         <ul>
           <li><a href="Студия">Студия</a></li>
-          <li><a href="Портфолио">Портфолио</a></li>
+          <li><a href="portfolio.html">Портфолио</a></li>
           <li><a href="Контакты">Контакты</a></li>
         </ul>
       </nav>
