--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
       </ul>
     </header>
     <main>
-      <!---примеры работ-->
+      <!---навигация сайта-->
       <section>
-        <h2>Наши работы</h2>
+        <h2>Примеры работ</h2>
         <ul>
           <li><button>Все</button></li>
           <li><button>Веб-сайты</button></li>
@@ -33,6 +33,10 @@
           <li><button>Дизайн</button></li>
           <li><button>Маркетинг</button></li>
         </ul>
+      </section>
+      <!---примеры работ-->
+      <section>
+        <h2>Наши работы</h2>
         <ul>
           <li>
             <a href=""></a>
