--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
   <body class="page">
     <!--- шапка-->
     <header>
-      <nav>
-        <a href="index.html" class="logo">
-          <span class="logo-main">Web</span
-          ><span class="logo-part">Studio</span>
-        </a>
+      <a href="index.html" class="logo">
+        <span class="logo-main">Web</span><span class="logo-part">Studio</span>
+      </a>
+      <nav class="site-nav">
         <ul>
-          <li><a href="Студия">Студия</a></li>
-          <li><a href="portfolio.html">Портфолио</a></li>
-          <li><a href="Контакты">Контакты</a></li>
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:++38-096-111-11-11">+38 096 111 11 11</a></li>
+      <ul class="nav-auth">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:++38-096-111-11-11" class="link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
