--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <body class="page">
     <!--- шапка-->
     <header>
-      <a href="index.html" class="logo">
+      <a href="./index.html" class="logo">
         <span class="logo-main">Web</span><span class="logo-part">Studio</span>
       </a>
-      <nav class="site-nav">
+      <nav class="site-nav list">
         <ul>
           <li><a href="" class="link">Студия</a></li>
-          <li><a href="portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="nav-auth">
+      <ul class="nav-auth list">
         <li>
           <a href="mailto:info@devstudio.com" class="link"
             >info@devstudio.com</a
@@ -31,42 +31,43 @@
       </ul>
     </header>
     <main>
-      <section>
-        <h1>
+      <!---Банер -->
+      <section class="hero">
+        <h1 class="hero-title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button>Заказать услугу</button>
+        <a href="" class="button secondary">Заказать услугу</a>
       </section>
 
       <!--- Особенности работы-->
-      <section>
-        <h2>Преимущества</h2>
-        <ul>
+      <section class="section list">
+        <h2 class="section-title">Преимущества</h2>
+        <ul class="feature-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="subtitle">Внимание к деталям</h3>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="subtitle">Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="subtitle">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="subtitle">Современные технологии</h3>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -74,8 +75,8 @@
         </ul>
       </section>
       <!---Чем занимаются-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section list">
+        <h2 class="title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img src="./img/box-1.jpg" alt="компьютер на столе" width="370" />
@@ -91,28 +92,28 @@
         </ul>
       </section>
       <!--- team-->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section list">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./img/img.jpg" alt="фото игорь демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="subtitle">Игорь Демьяненко</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./img/img-4.jpg" alt="фотоo Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="subtitle">Ольга Репина</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img src="./img/img-5.jpg" alt="фото Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="subtitle">Николай Тарасов</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./img/img-6.jpg" alt="фото Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="subtitle">Михаил Ермаков</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
