--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home-work-2</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="normalize" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -25,73 +25,73 @@
     </header>
     <main>
       <!---навигация сайта-->
-      <section>
-        <h2>Примеры работ</h2>
+      <section class="section">
+        <h2 class="section-title">Примеры работ</h2>
         <ul>
-          <li><button>Все</button></li>
-          <li><button>Веб-сайты</button></li>
-          <li><button>Приложения</button></li>
-          <li><button>Дизайн</button></li>
-          <li><button>Маркетинг</button></li>
+          <li><button class="button primary">Все</button></li>
+          <li><button class="button primary">Веб-сайты</button></li>
+          <li><button class="button primary">Приложения</button></li>
+          <li><button class="button primary">Дизайн</button></li>
+          <li><button class="button primary">Маркетинг</button></li>
         </ul>
       </section>
       <!---примеры работ-->
-      <section>
-        <h2>Наши работы</h2>
+      <section class="section">
+        <h2 class="section-title">Наши работы</h2>
         <ul>
           <li>
             <a href=""></a>
             <img src="./img2/img-1.jpg" alt="экран с фото" />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="section-subtitle">Технокряк</h3>
+            <p class="section-text">Веб-сайт</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-2.jpg" alt="баскетболисты с мячем" />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="section-subtitle">Постер New Orlean vs Golden Star</h3>
+            <p class="section-text">Дизайн</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-3.jpg" alt="акула с надписью" />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="section-subtitle">Ресторан Seafood</h3>
+            <p class="section-text">Приложение</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-4.jpg" alt="наушники" />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="section-subtitle">Проект Prime</h3>
+            <p class="section-text">Маркетинг</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-5.jpg" alt="коробочки" />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="section-subtitle">Проект Boxes</h3>
+            <p class="section-text">Приложение</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-6.jpg" alt="монитор" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="section-subtitle">Inspiration has no Borders</h3>
+            <p class="section-text">Веб-сайт</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-7.jpg" alt="открытый журнал" />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="section-subtitle">Издание Limited Edition</h3>
+            <p class="section-text">Дизайн</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-8.jpg" alt="бирка" />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="section-subtitle">Проект LAB</h3>
+            <p class="section-text">Маркетинг</p>
           </li>
           <li>
             <a href=""></a>
             <img src="./img2/img-9.jpg" alt="ноутбук" />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="section-subtitle">Growing Business</h3>
+            <p class="section-text">Приложение</p>
           </li>
         </ul>
       </section>
