--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
-    <link rel="stylesheet" href="font-style" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    />
     <link rel="stylesheet" href="normalize" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -37,16 +40,16 @@
       <section class="section filters">
         <h1>Наши работы</h1>
         <ul>
-          <li><button buton type="" class="button primary">Все</button></li>
+          <li><button class="button primary">Все</button></li>
           <li>
-            <button buton type="" class="button primary">Веб-сайты</button>
+            <button class="button primary">Веб-сайты</button>
           </li>
           <li>
-            <button buton type="" class="button primary">Приложения</button>
+            <button class="button primary">Приложения</button>
           </li>
-          <li><button buton type="" class="button primary">Дизайн</button></li>
+          <li><button class="button primary">Дизайн</button></li>
           <li>
-            <button buton type="" class="button primary">Маркетинг</button>
+            <button class="button primary">Маркетинг</button>
           </li>
         </ul>
       </section>
@@ -54,69 +57,51 @@
       <section class="section portfolio">
         <h2 class="title">Примеры работ</h2>
         <ul>
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-1.jpg" alt="экран с фото" />
-              <h3 class="subtitle">Технокряк</h3>
-              <p class="text">Веб-сайт</p>
-            </li></a
-          >
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-2.jpg" alt="баскетболисты с мячем" />
-              <h3 class="subtitle">Постер New Orlean vs Golden Star</h3>
-              <p class="text">Дизайн</p>
-            </li></a
-          >
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-3.jpg" alt="акула с надписью" />
-              <h3 class="subtitle">Ресторан Seafood</h3>
-              <p class="text">Приложение</p>
-            </li></a
-          >
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-4.jpg" alt="наушники" />
-              <h3 class="subtitle">Проект Prime</h3>
-              <p class="text">Маркетинг</p>
-            </li></a
-          >
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-5.jpg" alt="коробочки" />
-              <h3 class="subtitle">Проект Boxes</h3>
-              <p class="text">Приложение</p>
-            </li></a
-          >
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-6.jpg" alt="монитор" />
-              <h3 class="subtitle">Inspiration has no Borders</h3>
-              <p class="text">Веб-сайт</p>
-            </li></a
-          >
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-7.jpg" alt="открытый журнал" />
-              <h3 class="subtitle">Издание Limited Edition</h3>
-              <p class="text">Дизайн</p>
-            </li></a
-          >
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-8.jpg" alt="бирка" />
-              <h3 class="subtitle">Проект LAB</h3>
-              <p class="text">Маркетинг</p>
-            </li></a
-          >
-          <a href=""
-            ><li class="card">
-              <img src="./img2/img-9.jpg" alt="ноутбук" />
-              <h3 class="subtitle">Growing Business</h3>
-              <p class="text">Приложение</p>
-            </li></a
-          >
+          <li class="card">
+            <img src="./img2/img-1.jpg" alt="экран с фото" />
+            <h3 class="subtitle">Технокряк</h3>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li class="card">
+            <img src="./img2/img-2.jpg" alt="баскетболисты с мячем" />
+            <h3 class="subtitle">Постер New Orlean vs Golden Star</h3>
+            <p class="text">Дизайн</p>
+          </li>
+          <li class="card">
+            <img src="./img2/img-3.jpg" alt="акула с надписью" />
+            <h3 class="subtitle">Ресторан Seafood</h3>
+            <p class="text">Приложение</p>
+          </li>
+          <li class="card">
+            <img src="./img2/img-4.jpg" alt="наушники" />
+            <h3 class="subtitle">Проект Prime</h3>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li class="card">
+            <img src="./img2/img-5.jpg" alt="коробочки" />
+            <h3 class="subtitle">Проект Boxes</h3>
+            <p class="text">Приложение</p>
+          </li>
+          <li class="card">
+            <img src="./img2/img-6.jpg" alt="монитор" />
+            <h3 class="subtitle">Inspiration has no Borders</h3>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li class="card">
+            <img src="./img2/img-7.jpg" alt="открытый журнал" />
+            <h3 class="subtitle">Издание Limited Edition</h3>
+            <p class="text">Дизайн</p>
+          </li>
+          <li class="card">
+            <img src="./img2/img-8.jpg" alt="бирка" />
+            <h3 class="subtitle">Проект LAB</h3>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li class="card">
+            <img src="./img2/img-9.jpg" alt="ноутбук" />
+            <h3 class="subtitle">Growing Business</h3>
+            <p class="text">Приложение</p>
+          </li>
         </ul>
       </section>
       <!--- футер-->
