add class "list"

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <a href="./index.html" class="logo">
         <span class="logo-main">Web</span><span class="logo-part">Studio</span>
       </a>
-      <nav class="site-nav list">
-        <ul>
+      <nav class="site-nav">
+        <ul class="list">
           <li><a href="" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
@@ -48,7 +48,7 @@
       <!--- Особенности работы-->
       <section class="section">
         <h2 class="title">Преимущества</h2>
-        <ul class="feature-list">
+        <ul class="feature list">
           <li>
             <h3 class="subtitle">Внимание к деталям</h3>
             <p class="text">
@@ -80,9 +80,9 @@
         </ul>
       </section>
       <!---Чем занимаются-->
-      <section class="section">
+      <section class="section work">
         <h2 class="title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./img/box-1.jpg" alt="компьютер на столе" width="370" />
           </li>
@@ -99,7 +99,7 @@
       <!--- team-->
       <section class="section section-team">
         <h2 class="title">Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li class="card">
             <img src="./img/img.jpg" alt="фото игорь демьяненко" width="270" />
             <h3 class="subtitle">Игорь Демьяненко</h3>
