--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
       <a href="./index.html" class="logo">
         <span class="logo-main">Web</span><span class="logo-part">Studio</span>
       </a>
-      <nav class="site-nav list">
-        <ul>
+      <nav class="site-nav">
+        <ul class="list">
           <li><a href="" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
@@ -37,9 +37,9 @@
     </header>
     <main>
       <!---навигация page-->
-      <section class="section filters">
+      <section class="section filters list">
         <h1>Наши работы</h1>
-        <ul>
+        <ul class="list">
           <li><button class="button primary">Все</button></li>
           <li>
             <button class="button primary">Веб-сайты</button>
@@ -56,7 +56,7 @@
       <!---примеры работ-->
       <section class="section portfolio">
         <h2 class="title">Примеры работ</h2>
-        <ul>
+        <ul class="list">
           <li class="card">
             <img src="./img2/img-1.jpg" alt="экран с фото" />
             <h3 class="subtitle">Технокряк</h3>
