create new folder home work 2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
       <nav class="site-nav">
         <ul class="list">
-          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./" class="link-act">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -46,7 +46,7 @@
       </section>
       <!--- Особенности работы-->
       <section class="section">
-        <h2 class="title">Преимущества</h2>
+        <!--<h2 class="title">Преимущества</h2>-->
         <ul class="feature list">
           <li>
             <h3 class="subtitle">Внимание к деталям</h3>
