--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
       </a>
       <nav class="site-nav">
         <ul class="list">
-          <li><a href="" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link-act">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
@@ -36,9 +36,9 @@
       </ul>
     </header>
     <main>
-      <!---filters -->
+      <!---Наши работы -->
       <section class="filters list">
-        <h1>Наши работы</h1>
+        <!--<h1>Наши работы</h1>-->
         <ul class="list">
           <li><button class="button primary">Все</button></li>
           <li>
@@ -52,10 +52,7 @@
             <button class="button primary">Маркетинг</button>
           </li>
         </ul>
-      </section>
-      <!---примеры работ-->
-      <section class="portfolio">
-        <ul class="list">
+        <ul class="portfolio list">
           <li class="card">
             <a href=""
               ><img src="./img2/img-1.jpg" alt="экран с фото" />
